test/bad/contravariant_mismatch.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let bad : ((n : Nat) -> Nat) -> (0 n : Nat) -> Nat = \f n. f n;
bad
